fixup! Increase spacing between form items.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -165,7 +165,7 @@ main {
 [type="color"], [type="date"], [type="datetime-local"], [type="datetime"],
 [type="email"], [type="month"], [type="number"], [type="password"],
 [type="search"], [type="tel"], [type="text"], [type="time"], [type="url"],
-[type="week"], textarea, select {
+[type="week"], textarea, select, .button.large {
     border-radius: 3px;
 
     height: 3rem;
